# goban

./: .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  CREDITS.md  INSTALL.md  Makefile  README.md  RELEASE_NOTES.md  make.bat  user.json  wiki-todo.txt
.github/workflows/: build.yml
Windows/: Goban.props  Goban.vcxproj  goban.sln
cmake/: FindGnuGo.cmake  FindLibGlyphy.cmake  FindLibRocket.cmake  FindPortaudio.cmake  gen_filelists.sh
config/: base.json  config.json  cs.json  en.json  ja.json  ko.json  zh.json
config/engines.available/: main.txt  pachi-fast.txt
config/engines.enabled/: main.txt  pachi-fast.txt
config/gui/: base.rcss  open.rcss
config/gui/cs/: fonts.rcss  goban.rml  open.rml
config/gui/en/: fonts.rcss  goban.rml  open.rml
config/gui/ja/: fonts.rcss  goban.rml  open.rml
config/gui/ko/: fonts.rcss  goban.rml  open.rml
config/gui/zh/: fonts.rcss  goban.rml  open.rml
config/shaders/fragment/: 2d.glsl  red_carpet.glsl  red_carpet_stereo.glsl  thin.glsl
config/shaders/fragment/partial/: api.glsl  footer.glsl  header.glsl  setup.glsl
config/shaders/fragment/partial/algorithm/: intersect.glsl  shade.glsl
config/shaders/fragment/partial/material/: red.glsl  thin.glsl
config/shaders/fragment/partial/scene/: thin.glsl
config/shaders/fragment/partial/scene/object/: board.glsl  bowls.glsl  plane.glsl  sphere.glsl  stones.glsl
config/shaders/fragment/partial/stereo/: off.glsl  on.glsl
config/shaders/legacy/: fragment.25D.glsl  fragment.2D.glsl  fragment.anaglyph.glsl  fragment.glsl  vertex.anaglyph.glsl
config/shaders/vertex/: mono.glsl  stereo.glsl
data/: config.json
data/glsl/: fragment.25D.glsl  fragment.2D.glsl  fragment.anaglyph.glsl  fragment.carpet.glsl  fragment.glsl  fragment.glsl.opt  overlay-fragment.glsl  vertex.anaglyph.glsl  vertex.glsl  vertex.glsl.opt
data/gui/: base.rcss  goban.rcss  goban.rml  open.rcss  open.rml  zhchars.sh
data/gui/en/: fonts.rcss  goban.rml  open.rml
data/gui/zh/: fonts.rcss  goban.rcss  goban.rml  open.rml
data/sgf/: README.md
data/shaders/: fragment.glsl  red_carpet.glsl  vertex.anaglyph.glsl
data/shaders/common/: antialiasing.glsl  board.glsl  bowl_stones.glsl  bowls.glsl  common_code.glsl  csg.glsl  fragment_api.glsl  legs.glsl  plane.glsl  render.glsl  scene.glsl  shading.glsl  sphere.glsl  stones.glsl  vertex.glsl
data/shaders/fragment/: flat.glsl  thin_stereo.glsl
data/shaders/fragment/partial/: api.glsl  setup.glsl
data/shaders/fragment/partial/algorithm/: antialias.glsl  render.glsl  shade.glsl  texture.glsl
data/shaders/fragment/partial/material/: red.glsl  thin.glsl
data/shaders/fragment/partial/scene/: 2d.glsl  flat.glsl  red.glsl  thin.glsl
data/shaders/fragment/partial/scene/object/: board.glsl  bowl_stones.glsl  bowls.glsl  legs.glsl  sphere.glsl  stone_2d.glsl  stone_3d.glsl  stones.glsl
data/shaders/fragment/partial/stereo/: on.glsl
data/shaders/legacy/: fragment.25D.glsl  fragment.2D.glsl  fragment.anaglyph.glsl  fragment.glsl  vertex.anaglyph.glsl
data/shaders/nuovo/: antialiasing.glsl  board.glsl  bowl_stones.glsl  bowls.glsl  common_code.glsl  fragment_api.glsl  intersections.glsl  legs.glsl  materials.glsl  plane.glsl  randomness.glsl  raytracing.glsl  red_carpet.glsl  render.glsl  scene.glsl  shading.glsl  shadows.glsl  sphere.glsl  stones.glsl  table.glsl
data/shaders/nuovo-cleansig/: materials.glsl
data/shaders/vertex/: stereo.glsl
data/zh/: config.json
docs/: README.md  building.md  configuration.md  game-modes.md  getting-started.md  keyboard-shortcuts.md  sgf-records.md  user-settings.md
engine/: README.md
problems/alphago-2016/3/10/: Tictactoe.sgf
res/: stone_distance.nb  stone_distance.wls  stone_shape.nb  stone_shape.wls
res/problems/alphago/: master04_Xie_Erhao.sgf
res/problems/alphago-2016/3/12/: Tictactoe.sgf
res/problems/alphago-2016/3/13/: Tictactoe.sgf
res/problems/alphago-2016/3/15/: Tictactoe.sgf
res/problems/alphago-2016/3/9/: Tictactoe-2.sgf
src/: AppState.cpp  AppState.h  Board.cpp  Board.h  BoardObserver.h  Camera.cpp  Camera.h  Complex.cpp  Complex.h  Configuration.cpp  Configuration.h  Controls.cpp  Controls.h  ElementGame.cpp  ElementGame.h  Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  EventHandlerFileChooser.cpp  EventHandlerFileChooser.h  EventHandlerNewGame.cpp  EventHandlerNewGame.h  EventInstancer.cpp  EventInstancer.h  EventManager.cpp  EventManager.h  FileChooserDataSource.cpp  FileChooserDataSource.h  GameNavigator.cpp  GameNavigator.h  GameObserver.h  GameRecord.cpp  GameRecord.h  GameState.cpp  GameState.h  GameThread.cpp  GameThread.h  GobanControl.cpp  GobanControl.h  (+31 more)
src/glad/include/glad/: glad.h  glad_glx.h  glad_wgl.h
src/glad/src/: glad.c  glad_glx.c  glad_wgl.c
src/glyphy/: GlyphyAtlas.cc  GlyphyAtlas.h  GlyphyBuffer.cc  GlyphyBuffer.h  GlyphyFont.cc  GlyphyFont.h  GlyphyGLState.cc  GlyphyGLState.h  GlyphyShader.cc  GlyphyShader.h  GlyphyState.cc  GlyphyState.h  demo-atlas-glsl.h  demo-atlas.cc  demo-buffer.cc  demo-buffer.h  demo-common.h  demo-font.cc  demo-font.h  demo-fshader-glsl.h  demo-glstate.cc  demo-glstate.h  demo-shader.cc  demo-shader.h  demo-view.cc  demo-vshader-glsl.h  matrix4x4.c  trackball.c
src/sgf/: LICENSE  README.md
src/sgf/include/sgf/: sgf.hpp
src/shell/include/: Shell.h  ShellOpenGL.h  ShellRenderInterfaceExtensions.h  ShellRenderInterfaceOpenGL.h  ShellSystemInterface.h
src/shell/include/win32/: InputWin32.h
src/shell/include/x11/: InputX11.h
src/shell/src/: Shell.cpp  ShellFileInterface.cpp  ShellRenderInterfaceOpenGL.cpp  ShellSystemInterface.cpp
src/shell/src/macosx/: InputMacOSX.cpp
src/shell/src/win32/: ShellRenderInterfaceExtensionsOpenGL_Win32.cpp  ShellWin32.cpp
src/shell/src/x11/: InputX11.cpp  ShellRenderInterfaceExtensionsOpenGL_X11.cpp  ShellX11.cpp
src/sound/: AudioFile.cpp  AudioFile.hpp  AudioPlayer.cpp  AudioPlayer.hpp  FileHandler.cpp  FileHandler.hpp  StreamHandler.cpp  StreamHandler.hpp  util.cpp  util.hpp
wiki/: home.md
